--- a/app/src/release/res/values/google_maps_api.xml
+++ b/app/src/release/res/values/google_maps_api.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="google_maps_key" templateMergeStrategy="preserve">YOUR_API_KEY</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve">@string/google_maps_api_key</string>
 </resources>
