--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -35,7 +35,7 @@
             android:textSize="24sp" />
 
         <Button
-            android:id="@+id/button_use_current_location"
+            android:id="@+id/proceed_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/use_my_current_location"
