--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -39,7 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/use_my_current_location"
-            android:visibility="invisible" />
+            android:visibility="gone" />
 
     </LinearLayout>
 
